--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,13 @@ VITE_HERO_IMAGE=
 VITE_CONTACT_EMAIL=hello@example.com
 VITE_CONTACT_PHONE=+1 (555) 123-4567
 VITE_CONTACT_ADDRESS=123 Blossom Ave, Floral City
-VITE_CONTACT_GITHUB=https://github.com# Feature flags
+VITE_CONTACT_GITHUB=https://github.com
+
+# Admin / Backend Integration
+VITE_ENABLE_ADMIN=true
+VITE_USE_LARAVEL=false
+VITE_LARAVEL_API_BASE=http://localhost:8000/api
+
+# Feature flags
 # Set to 'false' (string) to hide all pricing UI and replace with informational text.
 VITE_SHOW_PRICES=true
